@@ -23,8 +23,10 @@ common: &default_settings
   # Application Name
   # Set this to be the name of your application as you'd like it show up in RPM.
   # RPM will then auto-map instances of your application into a RPM "application"
-  # on your home dashboard page. This setting does not prevent you from manually
-  # defining applications.
+  # on your home dashboard page. If you want to map this instance into multiple
+  # apps, like "AJAX Requests" and "All UI" then specify a semicolon separated
+  # list of up to three distinct names.  This setting does not prevent you from 
+  # manually defining applications. 
   app_name: My Application
 
   # When 'enabled' is turned on, the agent collects performance data by inserting lightweight
