@@ -60,13 +60,13 @@ class AgentTest < ActiveSupport::TestCase
   
   def test_manual_overrides
     NewRelic::Agent.manual_start :app_name => "testjobs", :dispatcher_instance_id => "mailer"
-    assert_equal "testjobs", NewRelic::Control.instance.app_name
+    assert_equal "testjobs", NewRelic::Control.instance.app_names[0]
     assert_equal "mailer", NewRelic::Control.instance.dispatcher_instance_id
   end
   def test_restart
     NewRelic::Agent.manual_start :app_name => "noapp", :dispatcher_instance_id => ""
     NewRelic::Agent.manual_start :app_name => "testjobs", :dispatcher_instance_id => "mailer"
-    assert_equal "testjobs", NewRelic::Control.instance.app_name
+    assert_equal "testjobs", NewRelic::Control.instance.app_names[0]
     assert_equal "mailer", NewRelic::Control.instance.dispatcher_instance_id
   end
   
