@@ -1,6 +1,14 @@
 # This is a controller class used in testing controller instrumentation
 class NewRelic::Agent::AgentTestController < ActionController::Base
   filter_parameter_logging :social_security_number
+
+  def rescue_action(e) raise e end
+
+  ActionController::Routing::Routes.draw do | map |
+    map.connect ':controller/:action.:format'
+#    map.connect '/new_relic/agent/agent_test/:action', :controller => 'new_relic/agent/agent_test'
+  end
+  
   def index
     render :text => params.inspect
   end
